tests/dataset/tpc-h/compiler/cpp/q15.error
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:240:39: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  240 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                     ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:67,
                 from /usr/include/c++/13/algorithm:60,
                 from /tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:2:
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:240:66: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  240 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                                                  ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:240:66: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  240 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                                                  ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:240:39: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  240 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                     ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:240:66: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  240 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                                                  ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:240:66: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  240 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                                                  ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:240:80: error: template argument 1 is invalid
  240 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                                                                ^
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:240:80: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:243:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  243 |               __items.push_back((x.l_extendedprice * ((1 - x.l_discount))));
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:243:58: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  243 |               __items.push_back((x.l_extendedprice * ((1 - x.l_discount))));
      |                                                        ~ ^ ~~~~~~~~~~~~
      |                                                        |     |
      |                                                        int   std::any
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:243:62: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  243 |               __items.push_back((x.l_extendedprice * ((1 - x.l_discount))));
      |                                                              ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:243:62: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  243 |               __items.push_back((x.l_extendedprice * ((1 - x.l_discount))));
      |                                                              ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:238:13:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:237:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  237 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq15814528349/001/prog.cpp:237:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  237 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
